First end-to-end scenario complete with a database and server request.
- Mongo DB is used as storage, promise-based Mongo API wrapper is added
- First end to end scenario when a new flock is created when 'New' is clicked

--- a/TODO
+++ b/TODO
@@ -7,7 +7,7 @@
 - Support phone resolution (iPhone)
 
 - Organizer can specify the details of a new flock, this flock is accessible via a fixed url
-- Add unit testing infrastructure and add tests for the implemented scenarios
+- Add unit testing infrastructure and add tests for the implemented scenarios, add tests for id generator
 - Organizer can switch to the Participants tab which is empty
 - Participants tab contents is rendered, all the participants are shown
 - Limit on the number of the participants registered: 50 persons
