Added routing support using react-router.
- Changes to the build process and test running to support ES6 syntax
- Updated the tests for Header and Content to mock routing properly
- Added URL rewriting rules to server.js to properly serve 'configuration' and 'participation' subpathes
- Added stubs for the Event and Participants tabs

--- a/TODO
+++ b/TODO
@@ -1,15 +1,16 @@
 - Implement simple end-to-end scenario when an empty flock with no participants can be created, fixed url is created - DONE
 - Use LESS - DONE
+- Use Gulp to build the app - DONE
 
-- Use Gulp to build the app
+- Organizer can specify the details of a new flock, this flock is accessible via a fixed url
+  -- Scenario: root of the app has been opened, then navigation to the Event tab, then a new event is created
+- Add unit testing infrastructure and add tests for the implemented scenarios, add tests for id generator
+- Organizer can switch to the Participants tab which is empty
+- Participants tab contents is rendered, all the participants are shown
 
 - Support tablet resolution (iPad)
 - Support phone resolution (iPhone)
 
-- Organizer can specify the details of a new flock, this flock is accessible via a fixed url
-- Add unit testing infrastructure and add tests for the implemented scenarios, add tests for id generator
-- Organizer can switch to the Participants tab which is empty
-- Participants tab contents is rendered, all the participants are shown
 - Limit on the number of the participants registered: 50 persons
 - It is possible to add a new participant
 - It is possible to remove a participant
