When new event is created navigation to the admin URL for that event happens.

--- a/TODO
+++ b/TODO
@@ -4,9 +4,13 @@
 
 - Organizer can specify the details of a new flock, this flock is accessible via a fixed url
   -- Scenario: root of the app has been opened, then a new event is created, then navigation to the Event tab
-  -- If non-existing eventId then empty Event tab with an error message is displayed
-  -- If non-existing eventId then empty Participants tab with an error message is displayed
-  -- Organizer can switch to the Participants tab which is empty
+     --- New button creates a new event, stores it, the URL is constructed using its id, then the application navigates to /configuration/{admin_id}
+     --- The event details are displayed on the Event tab
+     --- The created event can be accessed via this URL /configuration/{admin_id}
+     --- The created event can be accessed via this URL /configuration/{attend_id}
+     --- If non-existing eventId then empty Event tab with an error message is displayed
+     --- If non-existing eventId then empty Participants tab with an error message is displayed
+     --- Organizer can switch to the Participants tab which is empty
 
 - Add unit testing infrastructure and add tests for the implemented scenarios, add tests for id generator
 - Participants tab contents is rendered, all the participants are shown
