Defined the URLs for the admin and guest access.
Depending on the assumed role of the user the search for an event by key is done either using the admin key or the guest key.

--- a/TODO
+++ b/TODO
@@ -4,17 +4,25 @@
 
 - Organizer can specify the details of a new flock, this flock is accessible via a fixed url
   -- Scenario: root of the app has been opened, then a new event is created, then navigation to the Event tab
-     --- New button creates a new event, stores it, the URL is constructed using its id, then the application navigates to /configuration/{admin_id}
-     --- The event details are displayed on the Event tab
-     --- The created event can be accessed via this URL /configuration/{admin_id}
+     --- New button creates a new event, stores it, the URL is constructed using its id, then the application navigates to /configuration/{admin_id} - DONE
+     --- The event details are displayed on the Event tab - DONE
+     --- The created event can be accessed via this URL /admin/event/{admin_id}
 
-     --- The created event can be accessed via this URL /configuration/{attend_id}
+     --- The created event can be accessed via this URL /guest/event/{attend_id}
      --- If non-existing eventId then empty Event tab with an error message is displayed
      --- If non-existing eventId then empty Participants tab with an error message is displayed
      --- Organizer can switch to the Participants tab which is empty
+     --- Accessing /admin/* with a guest id is not possible
+     --- Accessing /admin/* with unknown id is not possible
+     --- Accessing /guest/* with an admin id is not possible
+     --- Accessing /guest/* with unknown id is not possible
+     --- Guest does not receive adminKey
+     --- Event details can be edited and saved
 
 - Add unit testing infrastructure and add tests for the implemented scenarios, add tests for id generator
 - Participants tab contents is rendered, all the participants are shown
+
+- The id is not passed as part of the URL but as parameters in the body
 
 - Support tablet resolution (iPad)
 - Support phone resolution (iPhone)
