Active tab is highlighted.

--- a/TODO
+++ b/TODO
@@ -10,6 +10,7 @@
      --- The created event can be accessed via this URL /guest/event/{attend_id} - DONE
      --- Event details can be edited and saved by an admin
      --- Event details can only be viewed and not edited by a guest
+     --- It is possible to switch between tabs
 
      --- If non-existing eventId then empty Event tab with an error message is displayed
      --- If non-existing eventId then empty Participants tab with an error message is displayed
