--- a/TODO
+++ b/TODO
@@ -10,7 +10,7 @@
      --- The created event can be accessed via this URL /guest/event/{attend_id} - DONE
      --- Event details can be edited and saved by an admin - DONE
      --- Event details can only be viewed and not edited by a guest - DONE
-     --- Event name is shown in the browser title as well, together with 'invite' for a guest
+     --- Event name is shown in the browser title as well, together with 'invite' for a guest - DONE
      --- It is possible to switch between tabs - DONE
          ---- When switching between tabs the values on the Events tab should not disappear
      --- Add form validation for the Event tab
