Adds header for the Event details section.

--- a/TODO
+++ b/TODO
@@ -12,18 +12,18 @@
      --- Event details can only be viewed and not edited by a guest - DONE
      --- Event name is shown in the browser title as well, together with 'invite' for a guest - DONE
      --- It is possible to switch between tabs - DONE
-         ---- When switching between tabs the values on the Events tab should not disappear
+         ---- When switching between tabs the values on the Events tab should not disappear - DONE
      --- Add form validation for the Event tab
-
-     --- If non-existing eventId then empty Event tab with an error message is displayed
-     --- If non-existing eventId then empty Participants tab with an error message is displayed
-     --- Organizer can switch to the Participants tab which is empty
      --- Accessing /admin/* with a guest id is not possible
      --- Accessing /admin/* with unknown id is not possible
      --- Accessing /guest/* with an admin id is not possible
      --- Accessing /guest/* with unknown id is not possible
      --- Guest does not receive adminKey
      --- What if the values of the fields are too long?
+
+     --- If non-existing eventId then empty Event tab with an error message is displayed
+     --- If non-existing eventId then empty Participants tab with an error message is displayed
+     --- Organizer can switch to the Participants tab which is empty
 
 - Add unit testing infrastructure and add tests for the implemented scenarios, add tests for id generator
 - Participants tab contents is rendered, all the participants are shown
@@ -56,6 +56,8 @@
 - Users can join flocks using their Facebook identities
 - Users can join flocks using their Twitter identities
 - Users can join flocks using their LinkedIn identities
+
+- Templates for creating events
 
 - Deploy the second version to Heroku
 - Localization: Finnish, Dutch, German
